fix: launch endpoint now accepts json instead of form-data
